package com.carpoolapp.carpoolService.models.enums;

public enum RideType {
    RECURRING,  // The ride is scheduled to occur at regular intervals
    ONE_TIME    // The ride is a one-time event
}
