package com.carpoolapp.carpoolService.models.enums;

public enum TransactionStatus {
    PENDING,
    COMPLETED
}
