package com.carpoolapp.carpoolService.models.enums;

public enum TransactionType {
    DEBIT,
    CREDIT
}
